# velocity

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  DISCLAIMER.md  Makefile  NOTICE  Palantir_Gotham_OSINT_Data_Aggregation_Report.docx  README.md  deep-research-report.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  research_updated.md  sim-running-snapshot.md  start.bat  start.sh  tsconfig.base.json
.claude-plugin/: marketplace.json
apps/api/: Dockerfile  lod1_render.py  lod1_textured.py  pyproject.toml
apps/api/app/: acars.py  adsb_sidecar.py  ais_firehose.py  ais_keyless.py  ais_sidecar.py  audit.py  auth.py  config.py  eusi.py  history.py  keys.py  llamacpp_sidecar.py  llm.py  main.py  marinetraffic.py  maritime_keyless.py  markets.py  mavlink_bridge.py  mavlink_sidecar.py  mcp_server.py  memtier.py  places.py  ratelimit.py  satcat.py  security.py  tier.py  tilecache.py  upstream.py  vllm_sidecar.py
apps/api/app/correlate/: bus.py  rules.py  runner.py  store.py  types.py
apps/api/app/data/: airports.json  airports_detail.json  bases.json  cams.yaml  military.json  ports.json  ports_detail.json
apps/api/app/foundry/: __init__.py  binding.py  builds.py  checks.py  geo.py  ingest.py  monitors.py  scheduler.py  seed.py  sqlrun.py  store.py  transforms.py
apps/api/app/fusion/: __init__.py  ingest.py  pairs.py
apps/api/app/geo/: __init__.py  adminshapes.py
apps/api/app/imagery/: __init__.py  cdse.py  detect.py  gibs.py  ondemand.py  tasking.py  tiler.py  vhr.py
apps/api/app/ingest/: opensky.py
apps/api/app/intel/: __init__.py  actions.py  agent.py  alert_rules_local.py  analytics.py  aoi.py  baseline.py  case_export.py  classification.py  conflict.py  country_profile.py  cue.py  deception.py  detectors.py  dossier.py  emitter.py  evidence.py  gdelt_match.py  geo.py  graph_analytics.py  ground.py  imagery_index.py  incident_store.py  incidents.py  instability.py  lod1.py  offroad.py  ontology.py  ontology_local.py  pol.py  promotion.py  resolve.py  sar_damage.py  sar_sweep.py  sar_vessels.py  shape.py  ucdp.py  watch.py  watch_officer.py
apps/api/app/localllm/: __init__.py  binary.py  catalog.py  hardware.py  manager.py  state.py
apps/api/app/news/: __init__.py  analyze.py  brief.py  feeds_register.py  history_local.py  images.py  sources.py  store.py  verify.py
apps/api/app/osint/: __init__.py  connectors.py  country_catalog.py  fetch.py
apps/api/app/osint/country_data/: ae.json  al.json  am.json  ar.json  at.json  au.json  az.json  bd.json  bg.json  br.json  by.json  cd.json  co.json  cu.json  dz.json  ec.json  eg.json  es.json  gb.json  ge.json  gr.json  id.json  il.json  in.json  iq.json  it.json  kp.json  lb.json  lt.json  lv.json  ma.json  mn.json  mx.json  my.json  ng.json  ni.json  np.json  pa.json  pe.json  ph.json  (+13 more)
apps/api/app/osint/sources/: __init__.py  corp.py  crypto.py  infra.py  netblock.py  social.py  threat_feeds.py
apps/api/app/routes/: _feedgeo.py  acars.py  actions.py  adsb.py  advisories.py  ai.py  ai_models.py  ai_selection.py  airhazards.py  airspace.py  ais.py  alert_rules.py  alerts.py  audit.py  aviation.py  cables.py  cams.py  climate.py  collab.py  config.py  conflict.py  correlations.py  countries.py  country_stats.py  cyber.py  displacement.py  entity.py  env.py  eq.py  events.py  evidence.py  export.py  extract.py  firms.py  foundry.py  geo_shapes.py  geocode.py  ground.py  hazards.py  health.py  (+31 more)
apps/api/app/workflows/: __init__.py  blocks.py  control.py  engine.py  py_runner.py  python_exec.py  scheduler.py  store.py
apps/api/supabase/migrations/: 0000_profiles.sql  0001_gotham_substrate_acl_audit.sql
apps/api/tests/: conftest.py  mcp_client_check.py  mcp_full_check.py  test_acars.py  test_action_proposals.py  test_actions.py  test_adminshapes.py  test_adsb_bbox_alias.py  test_adsb_failover.py  test_adsb_feeds.py  test_adsb_hot_blob.py  test_adsb_no_reverse.py  test_adsb_pos_age_cap.py  test_adsb_sidecar_only.py  test_adsb_sidecar_supervise.py  test_adsb_viewport_stable.py  test_advisories_routes.py  test_agent_actions.py  test_agent_need_to_know.py  test_agent_tools.py  test_ai_models_routes.py  test_ai_routes_e2e.py  test_ai_selection.py  test_airspace.py  test_ais_firehose.py  test_ais_keyless.py  test_ais_normalize.py  test_ais_sidecar_reuse.py  test_alert_rules.py  test_alert_rules_identity.py  test_analytics_dark_flag.py  test_audit.py  test_aviation_route.py  test_cams_route.py  test_case_export.py  test_classification.py  test_climate_routes.py  test_collab.py  test_collab_rls_schema.py  test_config_route.py  (+148 more)
apps/api/tests/fixtures/: broadcast_warn.json  metar_kjfk.json  satcat_sample.csv  tfr_detail_6_4909.xml
apps/native/: Cargo.toml
docs/: PREFLIGHT.md  adsb-aircraft-pipeline.md  beta-sql-commands.md  bug-report-uncommitted-wave-2026-07-12.md  commercial-licensing.md  country-osint-spec.md  dashboard-workflows-plan.md  data-layers-wave-2026-07-14-plan.md  decisions.md  deploy-cloudflare.md  foundry-gap-analysis-2026-07-08.md  foundry-plan.md  free-vhr-satellite-sources.md  frontend.md  gaussian-splat-free-sources.md  geo-assessment-testset.md  gotham-vs-velocity-2026-06-23.md  harness-bitter-lesson-audit.md  launch-posts-draft.md  mcp-server.md  office-hours-2026-06-15.md  ontology-autopopulation-plan.md  ontology-local-spine-plan.md  osint-sources-plan.md  photo-geolocation-pipeline.md  places-airspace-plan.md  post-datahoarder-2026-07-16.md  post-hn-2026-07.md  post-osint-2026-07.md  post-osinttools-2026-07-17.md  post-selfhosted-2026-07.md  replay-flagship-plan.md  research.md  research_updated.md  roadmap-ecosystem-mobile.md  roadmap-ontology-2026-07.md  roadmap-practitioners-2026-07.md  roadmap-users-2026-07.md  rpc-satellite-3dgs-plan.md  star-campaign-2026-07.md  (+19 more)
scripts/: build_places_data.py  deploy.sh  kill-port.sh  ontology_export.py  preflight.sh  run-api.sh  screenshot-globe.mjs  screenshot-panel.mjs  screenshot-selected.mjs  verify.sh
site/: .assetsignore  README.md  SETUP.md  account.html  index.html  login.html  main.js  (+7 more)
(+462 files in other folders)
