[project]
name = "osint-api"
version = "0.1.0"
description = "OSINT geospatial console — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.2",
  "websockets>=13.0",
  "sqlalchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "redis>=5.0.8",
  "apscheduler>=3.10.4",
  "orjson>=3.10.7",
  "pillow>=10.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "slowapi>=0.1.9",
  "mcp>=1.2.0",
]

[project.scripts]
osint-mcp = "app.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.6.8",
  "mypy>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# Manual MCP integration drivers run against a live backend (not unit tests):
# allow long assertion lines and the blocking urllib store-seed call.
"tests/mcp_*_check.py" = ["E501", "ASYNC210"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
