[project]
name = "osint-api"
version = "0.1.0"
description = "OSINT geospatial console — FastAPI backend"
requires-python = ">=3.12"
# NOTE: Postgres/Timescale + Redis are Phase 2 (the observation store
# migrates to a hypertable per plan §locked-decisions #5). Their client libs
# (sqlalchemy/asyncpg/redis/apscheduler) were removed from Phase 1 deps
# because nothing imports them — re-add alongside the actual integration.
# orjson was likewise dropped: FastAPI serializes annotated returns straight
# to JSON bytes via pydantic-core and deprecates ORJSONResponse.
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.2",
  "websockets>=13.0",
  "pillow>=10.0",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "mcp>=1.2.0",
  "pyais>=2.6.0",
  "feedparser>=6.0.11",
]

[project.scripts]
osint-mcp = "app.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom IS a call in an argument default —
# Depends()/Query() are designed for exactly that position.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# Manual MCP integration drivers run against a live backend (not unit tests):
# allow long assertion lines and the blocking urllib store-seed call.
"tests/mcp_*_check.py" = ["E501", "ASYNC210"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

