[project]
name = "osint-api"
version = "0.1.0"
description = "OSINT geospatial console — FastAPI backend"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
# NOTE: Postgres/Timescale + Redis are Phase 2 (the observation store
# migrates to a hypertable per plan §locked-decisions #5). Their client libs
# (sqlalchemy/asyncpg/redis/apscheduler) were removed from Phase 1 deps
# because nothing imports them — re-add alongside the actual integration.
# orjson was likewise dropped: FastAPI serializes annotated returns straight
# to JSON bytes via pydantic-core and deprecates ORJSONResponse.
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "httpx>=0.27.2",
  "websockets>=13.0",
  "pillow>=10.0",
  "python-pptx>=0.6.23",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "mcp>=1.2.0",
  "pyais>=2.6.0",
  "feedparser>=6.0.11",
  "cryptography>=42.0",
  "pyjwt>=2.0",
  # COG tiler (Track B2): turns Cloud-Optimized GeoTIFFs into XYZ tiles. Pulls
  # rasterio/GDAL, which do NOT build on every platform — app.imagery.tiler
  # guards the import so the app still boots if this fails to install. Keep it
  # graceful; do not make any import path hard-depend on it.
  "titiler-core>=0.18",
]

[project.scripts]
osint-mcp = "app.mcp_server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "ASYNC"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom IS a call in an argument default —
# Depends()/Query() are designed for exactly that position.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.File"]

[tool.ruff.lint.per-file-ignores]
# Manual MCP integration drivers run against a live backend (not unit tests):
# allow long assertion lines and the blocking urllib store-seed call.
"tests/mcp_*_check.py" = ["E501", "ASYNC210"]
# Tests favour long, readable assertion + fixture lines over hard wrapping.
"tests/*" = ["E501"]
# main.py imports the FastAPI app + routes AFTER the allocator (jemalloc/libc)
# setup block runs — that ordering is deliberate (scripts/run-api.sh + the memory
# guardrails depend on it), so module-level-import-not-at-top is expected here.
"app/main.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

