[package]
name = "velocity-native"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
